# openpassport-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  cert.pem  key.pem
api/: Cargo.toml
api/src/: apis.rs  main.rs
deno/: Cargo.toml  README.md  deno.json  package-lock.json  package.json
deno/src/: lib.rs  openPassportVerifier.ts
sdk/: Cargo.toml
sdk/src/: lib.rs  open_passport_1_step.rs  open_passport_verifier_report.rs
sdk/src/consts/: certs.rs  country_code.rs  mock.rs  mod.rs  vkey.rs
sdk/src/utils/: big_int.rs  cert.rs  circuit.rs  date.rs  mod.rs
wasm/: package-lock.json  package.json  tsconfig.json  webpack.config.js
wasm/src/: bootstrap.ts  index.ts  openPassportVerifier.ts
