[package]
name = "api"
description = "Snark server-side apis for verifying snark proofs"
version = "0.1.0"
edition = "2021"
licence = "MIT"
authors = ["Iskander <0xisk@proton.me>"]

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-cors = "0.7"
openssl = { version = "0.10" }
deno = { path = "../deno" }
serde = { version = "1.0.188", features = ["derive"] }
