[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
uuid = "1.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
ark-ec = "0.4.0"
ark-snark = "0.4.0"
ark-circom = "0.1.0"
ark-groth16 = "0.4.0"
ark-relations = "0.4.0"
ark-crypto-primitives = "0.4.0"
ark-bn254 = { version = "=0.4.0" }
ark-ed-on-bls12-381 = "0.4.0"  # For ECDSA (elliptic curve)
ark-std = "0.4.0"
sha1 = "0.10.6"
sha2 = "0.10.6"
sha3 = "0.10.6"
base64 = "0.22.1"
der-parser = "9.0.0"
x509-parser = "0.16.0"
num-bigint = "0.4.3"
chrono = "0.4.38"
openssl = "0.10.0"